tests/fail/new_dep_outlives_obj.stderr
error[E0505]: cannot move out of `x` because it is borrowed
 --> tests/fail/new_dep_outlives_obj.rs:7:10
  |
5 |     let obj = &*x;
  |               --- borrow of `*x` occurs here
6 |     let fortified = Fortify::new_dep(obj, |val| Lowered::new(*val));
7 |     drop(x);
  |          ^ move out of `x` occurs here
8 |     assert_eq!(**fortified.borrow(), 123);
  |                  ------------------ borrow later used here
